add page portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li class="link">
             <a class="text-link current" href="./index.html">Студія</a>
           </li>
-          <li class="link"><a class="text-link" href="">Портфоліо</a></li>
+          <li class="link"><a class="text-link" href="./portfolio.html">Портфоліо</a></li>
           <li class="link">
             <a class="text-link" href="#сontacts">Контакти</a>
           </li>
